# ModuleLearning

./: AGENTS.md  README.md  os_learn.py  pathlib_learning.py  pyproject.toml  rich_learn.py  shutil_learn.py
agentscope_learn/: basic.py
css_data/: css_test.tcss
images/: 1.jpg:Zone.Identifier  2.jpg:Zone.Identifier  3.jpg:Zone.Identifier
langchain_learn/notebooks/: 1_basic.ipynb  2_lcel_Interface.ipynb  3_runnable.ipynb  4_PromptTemplate.ipynb
langchain_learn/notebooks/.ipynb_checkpoints/: 2_lcel_Interface-checkpoint.ipynb  3_runnable-checkpoint.ipynb
langchain_learn/src/: simple_llm_app.py
langchain_notebooks/: 1_chat_models_prompts.ipynb  simple_llm_app.py
src/: json_learn.py  rich_learn.py  textual_learn.py  typer_learn.py
test/: test.py
