[project]
name = "modulelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope>=0.1.6",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "python-dotenv>=1.1.1",
    "rich[jupyter]>=14.1.0",
    "textual>=5.0.1",
    "textual-dev>=1.7.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
